// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for the "UISwitch" component renders correctly with description 1`] = `
Array [
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c4c4c4",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 12,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 12,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontSize": 16,
          "fontWeight": "400",
        }
      }
    >
      Some text here
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#7239f2"
      style={
        Object {
          "height": 31,
          "width": 51,
        }
      }
      thumbTintColor="#ffffff"
      tintColor="#dcdee1"
      value={true}
    />
  </View>,
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#000000",
            "fontSize": 14,
            "fontWeight": "200",
          },
          Object {
            "marginTop": 8,
          },
        ],
        undefined,
        undefined,
        undefined,
      ]
    }
  >
    Some more text here
  </Text>,
]
`;

exports[`Snapshot test for the "UISwitch" component renders correctly without description 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#c4c4c4",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 12,
      "paddingBottom": 12,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 12,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#000000",
        "flex": 1,
        "fontSize": 16,
        "fontWeight": "400",
      }
    }
  >
    Some text here
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#7239f2"
    style={
      Object {
        "height": 31,
        "width": 51,
      }
    }
    thumbTintColor="#ffffff"
    tintColor="#dcdee1"
    value={true}
  />
</View>
`;
